[package]
name = "hbc_parser_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
indexmap = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"